--- a/src/app/customers/customers-list/customers-list.component.html
+++ b/src/app/customers/customers-list/customers-list.component.html
@@ -1,6 +1,7 @@
+<filter-textbox></filter-textbox>
 <br />
 <br />
-<table class="table table-hover">
+<table class="table table-hover" width="70%">
   <thead>
     <tr>
       <th>Name</th>
