--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,4 @@
 <h1>
   {{ title }}
 </h1>
-<app-customers-list></app-customers-list>
+<app-customers-list [customers]="people"></app-customers-list>
